# VeloGet

./: .fletignore  .gitignore  AI_CONTEXT.md  BUILD_TRIGGER.md  LICENSE  README.md  build_release.sh  build_release_win.ps1  debug_download.py  main.py  pyproject.toml  requirements.txt  run_gui.sh
.github/workflows/: build-windows.yml  release.yml
src/ytdlpgui/: app.py  config.py  flet_main.py  main.py  settings.py
src/ytdlpgui.dist-info/: METADATA  top_level.txt
src/ytdlpgui/core/: app_update.py  dependency.py  runtime_bootstrap.py  site_profiles.py  splitter.py  utils.py  worker.py  ytdlp_cli.py
src/ytdlpgui/ui/: main_window.py
src/ytdlpgui/ui_flet/views/: analyzer.py  downloader.py  runtime_setup.py  settings.py  splitter.py
tests/: test_app_update.py  test_dependency_manager.py  test_release_workflow.py  test_runtime_bootstrap.py  test_sign_macos_app.py  test_site_profiles.py  test_worker_runtime.py  test_ytdlp_cli.py
tools/: sign_macos_app.py
