[project]
name = "VeloGet"
version = "1.0.4"
description = "VeloGet - 极简且强大的视频下载器"
authors = [
    { name = "Lucifer", email = "mr.lucis@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "flet>=0.80.5",
    "yt-dlp[default]>=2025.1.0",
]

[tool.flet]
product = "VeloGet"
org = "com.lucifer"
copyright = "Copyright (c) 2026 Lucifer"
